Object to primitive conversion

--- a/javascript/JsLearn/Js 1/index.html
+++ b/javascript/JsLearn/Js 1/index.html
@@ -5,6 +5,8 @@
 <script src="Fundamentals.js"></script>
 <script src="Practice.js"></script>
 <script src="Object.js"></script>
+<script src="Data types.js"></script>
+
 
 <body>
 
