advance working with functions left variables and ascopes

--- a/javascript/JsLearn/Js 1/index.html
+++ b/javascript/JsLearn/Js 1/index.html
@@ -6,6 +6,7 @@
 <script src="Practice.js"></script>
 <script src="Object.js"></script>
 <script src="Data types.js"></script>
+<script src="Advance.js"></script>
 
 
 <body>
