DOM Query selector and query selector all

--- a/DOM-webpack4-boiler/src/index.html
+++ b/DOM-webpack4-boiler/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>DOM learning</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="jumbotron">
     <h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
    <p class="lead" id="my-para">What is the DOM?
     The Document Object Model (DOM) is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
@@ -36,5 +38,8 @@
 </p>
 
 <button id="clicks-mine" class="btn btn-primary">Button Click Here</button>
+</div>
+</div>
+<!-- <script src="jquery-3.5.1.min.js"></script> -->
 </body>
 </html>
