--- a/DOM-webpack4-boiler/src/index.html
+++ b/DOM-webpack4-boiler/src/index.html
@@ -6,13 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>DOM learning</title>
+    <style>
+        #para {
+            visibility: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="jumbotron">
+    <div class="container my-5 py-5">
+        <!-- <div class="jumbotron">
     <h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
    <p class="lead" id="my-para">What is the DOM?
-    The Document Object Model (DOM) is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
+    The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
 
     A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
     
@@ -21,7 +26,7 @@
 
 <h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
 <p class="lead" id="my-para">What is the DOM?
- The Document Object Model (DOM) is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
+ The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
 
  A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
  
@@ -30,7 +35,7 @@
 
 <h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
 <p class="lead" id="my-para">What is the DOM?
- The Document Object Model (DOM) is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
+ The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
 
  A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
  
@@ -38,7 +43,19 @@
 </p>
 
 <button id="clicks-mine" class="btn btn-primary">Button Click Here</button>
-</div>
+</div> -->
+
+<button class="btn btn-primary" id="btn">SHOWED</button>
+<p class="lead" id="para">
+    The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
+
+    A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
+    
+    The W3C DOM and WHATWG DOM standards are implemented in most modern browsers. Many browsers extend the standard, so care must be exercised when using them on the web where documents may be accessed by various browsers with different DOMs.
+
+</p>
+
+
 </div>
 <!-- <script src="jquery-3.5.1.min.js"></script> -->
 </body>
