staring working in simple vanilla javascript in task manager

--- a/DOM-webpack4-boiler/src/index.html
+++ b/DOM-webpack4-boiler/src/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>DOM learning</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="./dist/style.css"> -->
+    <!-- <title>DOM learning</title> -->
+    <title>Task Manager</title>
     <!-- <style>
         #para {
             visibility: hidden;
@@ -15,63 +19,11 @@
 <body>
     <div class="container my-5 py-5">
 
-        <div class="col-sm-6 offset-sm-3">
-
-        <input type="text" id="idField" class="form-control" placeholder="Please type your full name...">
-         <ul class="list-group my-5" id="idList">
-             <br/>
-             <!-- <li class="list-group-item">
-
-             </li> -->
-         </ul>
+      <h1>Creating Assignments Tasks</h1>
     </div>
-        <!-- <div id="root">
 
 
-        </div> -->
-        <!-- <div class="jumbotron">
-    <h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
-   <p class="lead" id="my-para">What is the DOM?
-    The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
-
-    A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
-    
-    The W3C DOM and WHATWG DOM standards are implemented in most modern browsers. Many browsers extend the standard, so care must be exercised when using them on the web where documents may be accessed by various browsers with different DOMs.
-</p>
-
-<h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
-<p class="lead" id="my-para">What is the DOM?
- The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
-
- A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
- 
- The W3C DOM and WHATWG DOM standards are implemented in most modern browsers. Many browsers extend the standard, so care must be exercised when using them on the web where documents may be accessed by various browsers with different DOMs.
-</p>
-
-<h1 class="display-4" id="my-h1">DOM Learning Lessons</h1>
-<p class="lead" id="my-para">What is the DOM?
- The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
-
- A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model (DOM) represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
- 
- The W3C DOM and WHATWG DOM standards are implemented in most modern browsers. Many browsers extend the standard, so care must be exercised when using them on the web where documents may be accessed by various browsers with different DOMs.
-</p>
-
-<button id="clicks-mine" class="btn btn-primary">Button Click Here</button>
-</div> -->
-
-<!-- <button class="btn btn-primary" id="btn">SHOWED</button>
-<p class="lead" id="para">
-    The Document Object Model is a programming interface for HTML and XML documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects. That way, programming languages can connect to the page.
-
-    A Web page is a document. This document can be either displayed in the browser window or as the HTML source. But it is the same document in both cases. The Document Object Model represents that same document so it can be manipulated. The DOM is an object-oriented representation of the web page, which can be modified with a scripting language such as JavaScript.
-
-    The W3C DOM and WHATWG DOM standards are implemented in most modern browsers. Many browsers extend the standard, so care must be exercised when using them on the web where documents may be accessed by various browsers with different DOMs.
-
-</p> -->
-
-
-</div>
 <!-- <script src="jquery-3.5.1.min.js"></script> -->
+<!-- <script src="./dist/bundle.js"></script> -->
 </body>
 </html>
