creating tasks method using event and adding createnewtasks function

--- a/DOM-webpack4-boiler/src/index.html
+++ b/DOM-webpack4-boiler/src/index.html
@@ -17,10 +17,14 @@
        <div class="row">
            <div class="col mt-3 d-flex">
                <input type="text" placeholder="Type your Task Name" id="tasksField" class="form-control">
-               <button class="btn ml-1" id="addTasksbtn">
+               <button class="btn ml-1" id="addTasksButton">
                 <i class="fas fa-plus-circle"></i>
                </button>
            </div>
+       </div>
+
+       <div class="row my-5" id="all_Task">
+
        </div>
     </div>
 
