--- a/AJAX_webpack4/src/index.html
+++ b/AJAX_webpack4/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Twinkle Cats - Webpack 4 Crash Course</title>
+    <title>Contact Phonebook</title>
 </head>
 <body>
-    
-    <h1>Welcome Catians</h1>
+    <div class="container">
+    <h1>Using Ajax PhoneBook</h1>
+    </div>
 </body>
 </html>
