get all data by clicking loading data

--- a/AJAX_webpack4/src/index.html
+++ b/AJAX_webpack4/src/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
     <h1>Using Ajax PhoneBook</h1>
-    </div>
+    <button class="btn btn-danger" id="loadingData">Loading Data</button>
+    <p id="output"></p>
+</div>
 </body>
 </html>
