working with edit and delete button and all conatcs has been found form json server by starting in localhost browser

--- a/AJAX_webpack4/src/index.html
+++ b/AJAX_webpack4/src/index.html
@@ -35,13 +35,13 @@
         <table class="table table-dark table-striped">
             <thead>
               <tr>
-                <th>Full Name</th>
-                <th>Phone Number</th>
+                <th>Name</th>
+                <th>Phone</th>
                 <th>Email</th>
                 <th>Actions</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody">
             <tr>
                 <td>Julie</td>
                 <td>Julie</td>
