--- a/typescript/part 1/index.html
+++ b/typescript/part 1/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Working with Typescript</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
-    <script src='apps.ts' defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>TypeScript</title>
+  <script src="apps.js" defer></script>
 </head>
 <body>
-    <input type="number" id=numbers1>
-    <input type="text" id="numbers2">
-    <button>ADD</button>
+  <input type="number" id="numbers1">
+  <input type="text" id="numbers2">
+  <button>Add</button>
 </body>
 </html>
