--- a/UDEMY/advance level/WEB COMPONENTS/Lesson_1/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Lesson_1/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>WEB COMPONENTS</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Web Components</title>
+  <script src="modal.js"></script>
 </head>
 <body>
-    
+  <uc-modal>
+    <h1 slot="title">The Modal Title</h1>
+    <p>This is our first web component!</p>
+  </uc-modal>
+  <script>
+    const modal = document.querySelector('uc-modal');
+    setTimeout(() => {
+      modal.open();
+    }, 3000);
+  </script>
 </body>
 </html>
