--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -8,15 +8,10 @@
   <script src="tooltips.js"></script>
 </head>
 <body>
-  <uc-tooltips>
-    <!-- <h1 slot="title">The ToolTIPS Title</h1>
-    <p>This is our first web component!</p> -->
-  </uc-tooltips>
-  <!-- <script>
-    const modal = document.querySelector('uc-tooltips');
-    setTimeout(() => {
-      modal.open();
-    }, 3000);
-  </script> -->
+  <p></p><wc-tooltips>
+    <!-- <h1 slot="title">The ToolTIPS Title</h1> -->
+    Web Components App
+  </wc-tooltips> Awesome! </p>
+  <!-- <video src=""></video> -->
 </body>
 </html>
