working with listening events into inside the compoents

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -12,6 +12,9 @@
     <!-- <h1 slot="title">The ToolTIPS Title</h1> -->
     Web Components App
   </wc-tooltips> Awesome! </p>
+  <wc-tooltips>
+    Events Listener for Components
+  </wc-tooltips>
   <!-- <video src=""></video> -->
 </body>
 </html>
