working with using attributes on custom elements

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -8,7 +8,7 @@
   <script src="tooltips.js"></script>
 </head>
 <body>
-  <p></p><wc-tooltips>
+  <p><wc-tooltips text="This is Set for the Standards">
     <!-- <h1 slot="title">The ToolTIPS Title</h1> -->
     Web Components App
   </wc-tooltips> Awesome! </p>
