--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Components</title>
+  <style>
+    div {
+      border: 2px solid brown;
+
+    }
+  </style>
   <script src="tooltips.js"></script>
 </head>
 <body>
