defining the template in javascript

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -14,9 +14,9 @@
   <script src="tooltips.js"></script>
 </head>
 <body>
- <template id="tooltips-template">
+ <!-- <template id="tooltips-template">
   <slot>SOME DEFAULT</slot><span> (?) </span>
- </template>
+ </template> -->
 
   <p>
     <wc-tooltips text="This is Set for the Standards">
