Using style tags in the shadow dom

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -30,5 +30,8 @@
   </wc-tooltips> -->
   <wc-tooltips>
   </wc-tooltips>
+  <div>
+    This is not getting any web components styles tags!!!!
+  </div>
 </body>
 </html>
