extending built-in elements

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -12,6 +12,7 @@
     }
   </style>
   <script src="tooltips.js"></script>
+  <script src="confirm-link.js"></script>
 </head>
 <body>
  <!-- <template id="tooltips-template">
@@ -33,5 +34,6 @@
   <div>
     This is not getting any web components styles tags!!!!
   </div>
+  <a is="wc-confirm-link" href="https://www.google.com">GOOGLE</a>
 </body>
 </html>
