styling the Host Component

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -11,9 +11,14 @@
 
     }
 
+    wc-tooltips {
+      border: 1px solid rgb(87, 85, 199);
+      padding: 0.14rem;
+    }
+
     .highlight {
-      background-color: rgb(233, 188, 105);
-      border-bottom: 2px solid purple;
+      /* background-color: rgb(233, 188, 105); */
+      /* border-bottom: 2px solid purple; */
     }
 
 
@@ -22,10 +27,6 @@
   <script src="confirm-link.js"></script>
 </head>
 <body>
- <!-- <template id="tooltips-template">
-  <slot>SOME DEFAULT</slot><span> (?) </span>
- </template> -->
-
   <p>
     <wc-tooltips text="This is Set for the Standards">
     <!-- <h1 slot="title">The ToolTIPS Title</h1> -->
