smart dynamic styling with CSS variables

--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Components</title>
   <style>
+     html {
+       --color-primary: rgb(110, 202, 233);
+
+     }
+
     div {
       border: 2px solid rgb(199, 136, 136);
 
