--- a/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/PRACTICE_2/index.html
@@ -6,26 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Components</title>
   <style>
+   * {
+     box-sizing: border-box;
+   }
+
      html {
        --color-primary: rgb(110, 202, 233);
+       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
      }
-
-    div {
-      border: 2px solid rgb(199, 136, 136);
-
-    }
-
-    wc-tooltips {
-      border: 1px solid rgb(87, 85, 199);
-      padding: 0.14rem;
-    }
-
-    .highlight {
-      /* background-color: rgb(233, 188, 105); */
-      /* border-bottom: 2px solid purple; */
-    }
-
 
   </style>
   <script src="tooltips.js"></script>
@@ -40,9 +29,9 @@
 </p>
   <wc-tooltips>
   </wc-tooltips>
-  <div>
+  <!-- <div>
     This is not getting any web components styles tags!!!!
-  </div>
+  </div> -->
   <a is="wc-confirm-link" href="https://www.google.com">GOOGLE</a>
 </body>
 </html>
