creating the basic modal component

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -4,11 +4,27 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Basic Modal Component</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 2rem;
+            font-family: sans-serif;
+
+        }
+    </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <script src='modal.js'></script>
 </head>
 <body>
-    
+    <wc-modal>
+
+    </wc-modal>
+
+    <p>I am creating a basic Modal</p>
+    <button>SHOWS DETAILS</button>
 </body>
 </html>
