--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -14,7 +14,7 @@
             font-family: sans-serif;
 
         }
-        
+
     </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
@@ -22,6 +22,9 @@
 </head>
 <body>
     <wc-modal>
+        <p>
+            I am agree to work on project!!
+        </p>
 
     </wc-modal>
 
