adding some general app logic

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -30,5 +30,16 @@
 
     <p>I am creating a basic Modal</p>
     <button>SHOWS DETAILS</button>
+    <script>
+        const confirmButton = document.querySelector('button');
+        const modal = document.querySelector('wc-modal');
+
+
+        confirmButton.addEventListener('click', () => {
+         modal.setAttribute('opened', '');
+
+        });
+
+    </script>
 </body>
 </html>
