public methods and properties

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -36,7 +36,13 @@
 
 
         confirmButton.addEventListener('click', () => {
-         modal.setAttribute('opened', '');
+         // modal.setAttribute('opened', '');
+         if (!modal.isOpen) {
+            modal.open();
+            console.log('Modal Opening,,,!');
+         }
+        //  modal.open();
+         // console.log(modal.isOpen);
 
         });
 
