understanding named slots

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     <wc-modal>
+        <h1 slot="title">REQUEST CONFIRM</h1>
         <p>
             I am agree to work on project!!
         </p>
