listening to slot content changes

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -21,13 +21,7 @@
     <script src='modal.js'></script>
 </head>
 <body>
-    <wc-modal>
-        <h1 slot="title">REQUEST CONFIRM</h1>
-        <p>
-            I am agree to work on project!!
-        </p>
-
-    </wc-modal>
+    <wc-modal><h1 slot="title">REQUEST CONFIRM</h1><p>I am agree to work on project!!</p></wc-modal>
 
     <p>I am creating a basic Modal</p>
     <button>SHOWS DETAILS</button>
