closing the modal

--- a/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
+++ b/UDEMY/advance level/WEB COMPONENTS/Basic Modal Component/index.html
@@ -29,6 +29,14 @@
         const confirmButton = document.querySelector('button');
         const modal = document.querySelector('wc-modal');
 
+        modal.addEventListener('confirm', () => {
+            console.log('CONFIRMED!!!!.......');
+        });
+
+
+        modal.addEventListener('cancel', () => {
+            console.log('CANCELLED!!!!.......');
+        });
 
         confirmButton.addEventListener('click', () => {
          // modal.setAttribute('opened', '');
